--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "rxjs": "^5.0.1",
+    "socket.io": "^1.7.3",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
