--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@types/socket.io-client": "^1.4.29",
+    "angular2-useful-swiper": "^4.0.1",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "rxjs": "^5.0.1",
