--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2-useful-swiper": "^4.0.1",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
+    "electron": "^1.6.5",
     "rxjs": "^5.0.1",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
@@ -38,7 +39,7 @@
     "angular-cli": "1.0.0-beta.28.3",
     "codelyzer": "~2.0.0-beta.1",
     "devtron": "^1.4.0",
-    "electron-prebuilt": "^1.4.13",
+    "electron": "^1.6.5",
     "electron-reload": "^1.1.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
