--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "electron": "^1.6.5",
+    "pkg-config": "^1.1.1",
+    "qrcode-generator-ts": "0.0.4",
     "rxjs": "^5.0.1",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
